0.246 2025-01-21
  [Bug Fix]
    * Fix a bug that if $offset_ref argument of Regex#match_foward method is undef, segfault occurs.
  [Incompatible Changes]
    * Remove Regex#match_start field.
0.245 2025-01-17
  [Changes]
    * Load Resource::RE2 class.
    * Add version_from Regex to all classes except for Regex class.
  [Requirement Changes]
    * Require SPVM 0.990038.
0.244 2023-12-26
  [Bug Fix]
    * Fix the bug that FILE_NAME in native source file does not have the file scope.
0.243001 2023-10-27
  [Bug Fix]
    * Remove using env->get_ref_count native API.
    
0.243 2023-08-12
  [Performance Improvement]
    * The performance of the replace method is improved, because the string is not copied repeatedly.
  [New Features]
    * The following methods are added to the Regex class.
    
      method buffer_match : Regex::Match ($string_buffer : StringBuffer, $offset : int = 0, $length : int = -1);
      
      method buffer_match_forward : Regex::Match ($string_buffer : StringBuffer, $offset_ref : int*, $length : int = -1);
      
      method buffer_replace  : void ($string_buffer : StringBuffer, $replace : object of string|Regex::Replacer, $offset : int = 0, $length : int = -1, $options : object[] = undef);
      
      method buffer_replace_g  : string ($string_buffer : StringBuffer, $replace : object of string|Regex::Replacer, $offset : int = 0, $length : int = -1, $options : object[] = undef);
      
      method buffer_replace_common : void ($string_buffer : StringBuffer, $replace : object of string|Regex::Replacer, $offset_ref : int*, $length : int = -1, $options : object[] = undef);

0.242002 2023-08-09
  [Prerequirement Changes]
    * SPVM 0.989033+ is required.

0.242001 2023-05-29
  [Prerequirement Changes]
    * SPVM 0.986+ is required.
0.242 2023-05-26
  [New Features]
    * The match field is added to the Regex::ReplaceInfo class.
0.241002 2023-05-08
  [Prerequirement Changes]
    * SPVM 0.973+ is required.
0.241001 2023-05-05